--- a/scss/_project-details.scss
+++ b/scss/_project-details.scss
@@ -20,7 +20,7 @@
     white-space: nowrap;
     @include transition-ease;
     &:after {
-      content: 'Go back';
+      content: "Go back";
       position: absolute;
       left: 0;
       bottom: -2vw;
@@ -33,11 +33,13 @@
       color: $light-color;
       background: lighten($color: $primary-color, $amount: 20%);
       border-radius: 50%;
+      transform: translate(-20%, -50%);
       &::after {
         animation: clear 0.5s forwards;
       }
       i {
         color: $primary-color;
+        @include transition-ease;
       }
     }
     i {
@@ -67,13 +69,12 @@ main {
         color: lighten($primary-color, 40%);
         flex: 0 0 calc(33% - 1rem);
         margin-block-end: 2rem;
-
       }
       a {
         cursor: pointer;
         inline-size: max-content;
         margin-block-end: 2rem;
-        padding: 10px 5vmin 14px ;
+        padding: 10px 5vmin 14px;
         flex: 0 0 calc(33% - 1rem);
         background: linear-gradient(
           -45deg,
