--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -93,7 +93,7 @@
         to right rgba($primary-color, 0),
         rgba($primary-color, 0.79)
       ),
-      url(../img/projects-6.jpg) no-repeat center center/cover;
+      url(../img/projects-6.webp) no-repeat center center/cover;
     animation: none;
     overflow: hidden;
 
@@ -212,7 +212,7 @@
           to right rgba($primary-color, 0),
           rgba($primary-color, 0.8)
         ),
-        url(../img/bio-9.jpg) no-repeat top 15% center/cover;
+        url(../img/bio-9.webp) no-repeat top 15% center/cover;
       background-attachment: fixed;
 
       .about__bio {
@@ -239,7 +239,7 @@
         to right rgba($primary-color, 0),
         rgba($primary-color, 0.8)
       ),
-      url(../img/projects-8.jpg) no-repeat bottom 20% center/cover;
+      url(../img/projects-8.webp) no-repeat bottom 20% center/cover;
     background-attachment: fixed;
   }
 
