--- a/root/css/main.css
+++ b/root/css/main.css
@@ -929,58 +929,46 @@ html {
   padding: 0;
   width: 100%;
   height: 15%;
-  overflow: hidden;
 }
 
 .menu__back {
-  font-family: "Kirang Haerang", cursive;
-  font-size: clamp(2vw, 2rem, 5vw);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
   position: absolute;
   left: 3%;
   top: 50%;
+  font-family: "Oswald", sans-serif;
+  font-size: clamp(2vw, 1.5rem, 5vw);
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   cursor: pointer;
-  white-space: nowrap;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
 .menu__back:after {
-  content: "Go back";
-  position: absolute;
-  left: 0;
-  bottom: -2vw;
-  font-size: 1rem;
-  opacity: 0;
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
+  content: "Back";
+  font-size: clamp(1vw, 1rem, 3vw);
+  color: #676767;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
 .menu__back:hover {
-  color: white;
-  background: #5a5a5a;
-  border-radius: 50%;
-  -webkit-transform: translate(-20%, -50%);
-          transform: translate(-20%, -50%);
+  color: #676767;
+  -webkit-transform: translate(-15%, -50%);
+          transform: translate(-15%, -50%);
 }
 
 .menu__back:hover::after {
-  -webkit-animation: clear 0.5s forwards;
-          animation: clear 0.5s forwards;
-}
-
-.menu__back:hover i {
-  color: #272727;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
+  color: white;
 }
 
 .menu__back i {
-  color: #ffc907;
-  padding: 5px 7px;
+  -webkit-margin-end: 7px;
+          margin-inline-end: 7px;
 }
 
 main .article__header {
