--- a/scss/_project-details.scss
+++ b/scss/_project-details.scss
@@ -8,43 +8,32 @@
   padding: 0;
   width: 100%;
   height: 15%;
-  overflow: hidden;
   &__back {
-    font-family: $project-font;
-    font-size: clamp(2vw, 2rem, 5vw);
+    display: flex;
+    place-items: center;
     position: absolute;
     left: 3%;
     top: 50%;
+    font-family: $ff-detials-2;
+    font-size: clamp(2vw, 1.5rem, 5vw);
     transform: translateY(-50%);
     cursor: pointer;
-    white-space: nowrap;
     @include transition-ease;
     &:after {
-      content: "Go back";
-      position: absolute;
-      left: 0;
-      bottom: -2vw;
-      font-size: 1rem;
-      opacity: 0;
-      transform: translateY(10px);
+      content: "Back";
+      font-size: clamp(1vw, 1rem, 3vw);
+      color: lighten($color: $primary-color, $amount: 25%);
       @include transition-ease;
     }
     &:hover {
-      color: $light-color;
-      background: lighten($color: $primary-color, $amount: 20%);
-      border-radius: 50%;
-      transform: translate(-20%, -50%);
+      color: lighten($color: $primary-color, $amount: 25%);
+      transform: translate(-15%, -50%);
       &::after {
-        animation: clear 0.5s forwards;
-      }
-      i {
-        color: $primary-color;
-        @include transition-ease;
+        color: $light-color;
       }
     }
     i {
-      color: $yellow;
-      padding: 5px 7px;
+      margin-inline-end: 7px;
     }
   }
 }
