--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -7,8 +7,8 @@
 $primary-color: #272727;
 $secondary-color: #168de2;
 $yellow: #ffc907;
-$red: #ff0000;
-$green: #00ff00;
+$red-thick: #ff0000;
+$green-thick: #00ff00;
 $light-color: hsl(0, 0%, 100%);
 $grey: #262626;
 $red: #f79f1f;
