--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -8,8 +8,8 @@
     width: 100%;
     height: 100vh;
     background: linear-gradient(
-        to right rgba($primary-color, 0),
-        rgba($secondary-color, 0.4)
+        to right rgba($light-color, 0),
+        rgba($primary-color, 0.7)
       ),
       url(../img/fola-bio.jpeg) no-repeat top 15% center/cover;
 
