--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,8 +1,8 @@
 @include break-point-min(45em) {
   header {
-    position: absolute !important;
-    overflow-x: hidden;
-    padding: 0 !important;
+    // // position: absolute !important;
+    // overflow-x: hidden;
+    // padding: 0 !important;
   }
   .menu-btn {
     display: none;
