--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -2,41 +2,47 @@
 --------------------------------*/
 .projects {
   transition: all 0.5s 0.3s ease-in-out;
-  inline-size: 80%;
+  width: calc(min(90%, 70rem));
+  min-height: 100vh;
   margin: auto;
-  padding-block-end: 25vh;
-  display: grid;
-  grid-template-rows: 20%;
+  padding: 0 0 10vh;
+  display: flex;
+  flex-direction: column;
+  // grid-template-rows: 20%;
 
   &__header {
-    justify-self: center;
-    align-self: flex-end;
-    position: relative;
-    max-inline-size: 100%;
-    inline-size: 80%;
-    block-size: 20vh;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-self: center;
+    text-align: center;
+    margin: 2rem 0;
+    // justify-self: center;
+    // align-self: flex-end;
+    // position: relative;
+    // max-inline-size: 100%;
+    // inline-size: 80%;
+    // block-size: 20vh;
+    // overflow: hidden;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
 
     .text-secondary {
-      flex: 0 0 calc(33% - 1rem);
+      // flex: 0 0 calc(33% - 1rem);
       font-size: clamp(2vw, 2rem, 6vw);
       font-family: $ff-contact;
       font-weight: 700;
       color: $yellow;
       opacity: 0;
       transform: translateX(-7rem);
-      margin-block-end: 1rem;
+      margin-bottom: 1rem;
 
       animation: clear 2s forwards;
     }
     p {
-      text-align: justify;
-      line-height: 1.5;
+      max-width: 50ch;
+      // text-align: justify;
       font-size: clamp(1.5vw, 1.3rem, 4vw);
+      line-height: 1.3;
       color: darken($color: $light-color, $amount: 30%);
       opacity: 0;
       transform: translateY(-1rem) scale(1.2);
@@ -46,9 +52,15 @@
 
   &__items {
     display: grid;
-    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(auto, 220px));
+    grid-template-rows: 150px;
+    grid-auto-rows: 150px;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
   }
   &__item {
+    height: 100%;
     position: relative;
     background: linear-gradient(
         90deg,
@@ -68,9 +80,9 @@
       content: "";
       position: absolute;
       top: 0;
+      left: 0;
       right: 0;
       bottom: 100%;
-      left: 0;
       background: linear-gradient(
         to bottom rgba($primary-color, 0),
         rgba($primary-color, 0.9)
